Replace `LocalDateTime` with `Instant` for timestamps across library and session domain; update tests and fix related breaking changes.